tests/invalid/variable_no_type_no_initializer.ar
fn main() {
    const a;
}

//! 2:11: error: no type annotations provided
